# mayhouse

./: .gitignore  ALL_ERRORS_FIXED.md  ALL_JWT_FIXES_COMPLETE.md  BACKEND_BLOCKCHAIN_INTEGRATION_READY.md  BACKEND_FIXED.md  BACKEND_INTEGRATION_COMPLETE.md  BACKEND_INTEGRATION_START.md  BEGINNER_DEPLOYMENT_GUIDE.md  CREATE_EVENT_RUN_FIXED.md  DATETIME_VALIDATION_FIXED.md  DEPLOYMENT_SUCCESS.md  DESIGN_EXPERIENCE_FIX.md  EXPERIENCE_CREATION_FIXED.md  FINAL_FIX_COMPLETE.md  FIXES_APPLIED.md  HYBRID_BOOKING_IMPLEMENTATION.md  IMAGE_UPLOAD_TESTING_CHECKLIST.md  IMPLEMENTATION_TEST_CHECKLIST.md  INTEGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MODERATION_WORKFLOW_COMPLETE.md  MODERATOR_RENAME.md  PHOTO_UPLOAD_FEATURE.md  PHOTO_UPLOAD_SETUP.md  PHOTO_UPLOAD_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  RUN_MIGRATION.md  SETUP.md  SMART_CONTRACT_COMPLETE.md  START_SERVERS.md  SUBDOMAIN_SETUP_GUIDE.md  TEST_RESULTS.md  VENV_SETUP_COMPLETE.md  VERCEL_UPDATE_INSTRUCTIONS.md  WALLET_AUTH_COMPLETE.md  WEB3_HOST_FLOW_CHANGES.md  check_dns.sh  scratch-pad.md  (+7 more)
backend/: .dockerignore  .env.example  .gitignore  BLOCKCHAIN_INTEGRATION.md  DOCKER_README.md  Dockerfile  USER_FLOWS.md  USER_FLOWS_SUMMARY.md  config_after_ssl.md  docker-compose.prod.yml  docker-compose.yml  env.blockchain.template  env.example  install_dependencies.sh  main.py  pyproject.toml  quick_test.py  requirements.txt  run_seed_script.py  setup_ssl.sh  setup_ssl_fixed.sh  start.sh  test_auth_implementation.py  test_design_experience_runner.py  update_all_users_to_host.sql  update_env_for_production.sh
(+331 files in other folders)
