[project]
name = "mayhouse-backend"
version = "0.1.0"
description = "FastAPI backend for Mayhouse travel experiences platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.0.0",
    "supabase>=2.20.0",
    "uvicorn>=0.37.0",
    "email-validator>=2.3.0",
    "authlib>=1.6.4",
    "python-jose[cryptography]>=3.5.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
